MINOR: Clean up in ReassignPartitionsCommandTest